fix: remove animation & title font weight

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="stylesheet" href="./assets/css/style.css">
-	<link rel="stylesheet" href="./assets/css/wow.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.2/animate.min.css">
 
 	<script>
@@ -43,7 +42,7 @@
 	<main id="main">
 		<section class="mainvisual">
 			<div class="wrapper">
-				<div class="mainvisual__txt wow fadeIn" data-wow-delay="0.5s" data-wow-duration="1.5s">
+				<div class="mainvisual__txt">
 					<h1>
 						経験豊富なAI開発のエンジニアが<br>プロジェクトを成功に導く
 					</h1>
@@ -65,7 +64,7 @@
 		<section class="issue-sec">
 			<h2 class="sec-tit">AI開発でこんなお悩みはありませんか？</h2>
 			<div class="issue-sec__wrapper container">
-				<div class="issue-comp wow fadeInUp" data-wow-delay="0.5s" data-wow-duration="1.5s">
+				<div class="issue-comp">
 					<h3 class="issue-comp__tit">
 						希望する外注先が見つからない
 					</h3>
@@ -74,7 +73,7 @@
 					</figure>
 				</div>
 
-				<div class="issue-comp wow fadeInUp" data-wow-delay="1s" data-wow-duration="1.5s">
+				<div class="issue-comp">
 					<h3 class="issue-comp__tit">
 						Slerのクオリティに満足できない
 					</h3>
@@ -83,7 +82,7 @@
 					</figure>
 				</div>
 
-				<div class="issue-comp wow fadeInUp" data-wow-delay="1.5s" data-wow-duration="1.5s">
+				<div class="issue-comp">
 					<h3 class="issue-comp__tit">
 						費用を抑えて開発したい
 					</h3>
@@ -92,7 +91,7 @@
 					</figure>
 				</div>
 			</div>
-			<div class="issue-sec__desc container wow fadeInUp" data-wow-duration="1.5s">
+			<div class="issue-sec__desc container">
 				<p>・商品の発注数を予測するプログラムを開発したい</p>
 				<p>・自然言語領域のPoCに対応できる企業を探している</p>
 				<p>・画像認識モデルを作成しているが、精度良く判定できない</p>
@@ -105,7 +104,7 @@
 		<section class="solve-sec">
 			<h2 class="sec-tit">その悩み、エッジワークが解決します</h2>
 			<div class="solve-sec__wrapper container">
-				<div class="solve-comp wow fadeInUp" data-wow-delay="0.5s" data-wow-duration="1.5s">
+				<div class="solve-comp">
 					<figure class="solve-comp__img">
 						<img src="./assets/img/solve/01.png" alt="AI開発プラン">
 					</figure>
@@ -117,7 +116,7 @@
 						実現可否の確認や企画・構想段階から実行、運用などフェーズの移り変わりに伴う人員変更にも対応します。
 					</p>
 				</div>
-				<div class="solve-comp wow fadeInUp" data-wow-delay="1s" data-wow-duration="1.5s">
+				<div class="solve-comp">
 					<figure class="solve-comp__img">
 						<img src="./assets/img/solve/02.png" alt="スポット対応プラン">
 					</figure>
@@ -129,7 +128,7 @@
 						モデル開発やシステム構築といった短期間のスポット契約や常駐作業などお気軽にお申し付けください。
 					</p>
 				</div>
-				<div class="solve-comp wow fadeInUp" data-wow-delay="1.5s" data-wow-duration="1.5s">
+				<div class="solve-comp">
 					<figure class="solve-comp__img">
 						<img src="./assets/img/solve/03.png" alt="技術顧問プラン">
 					</figure>
@@ -145,7 +144,7 @@
 
 		<section class="unique-sec">
 			<h2 class="sec-tit">他社サービスとの違い</h2>
-			<div class="unique-sec__wrapper container wow fadeIn" data-wow-delay="0.5s" data-wow-duration="0.5s">
+			<div class="unique-sec__wrapper container">
 				<table>
 					<thead>
 						<tr>
@@ -202,7 +201,7 @@
 		<section class="reason-sec">
 			<h2 class="sec-tit">選ばれる3つの理由</h2>
 			<div class="reason-sec__wrapper container">
-				<div class="reason-comp wow fadeInLeft" data-wow-delay="0.5s" data-wow-duration="1.5s">
+				<div class="reason-comp">
 					<div class="reason-comp__desc">
 						<h3 class="reason-comp__tit">
 							生成AIに対応可能
@@ -215,7 +214,7 @@
 						<img src="./assets/img/reason/01.png" alt="生成AIに対応可能">
 					</figure>
 				</div>
-				<div class="reason-comp wow fadeInRight" data-wow-delay="1s" data-wow-duration="1.5s">
+				<div class="reason-comp">
 					<div class="reason-comp__desc">
 						<h3 class="reason-comp__tit">
 							プロダクト開発の知見
@@ -228,7 +227,7 @@
 						<img src="./assets/img/reason/02.png" alt="プロダクト開発の知見">
 					</figure>
 				</div>
-				<div class="reason-comp wow fadeInLeft" data-wow-delay="1.5s" data-wow-duration="1.5s">
+				<div class="reason-comp">
 					<div class="reason-comp__desc">
 						<h3 class="reason-comp__tit">
 							内製化支援実績
@@ -255,7 +254,7 @@
 			</ul>
 			<h2 class="sec-tit">様々なケースに対応可能</h2>
 			<div class="case-sec__wrapper container">
-				<div class="case-comp wow fadeInUp" data-wow-delay="0.5s" data-wow-duration="1.5s">
+				<div class="case-comp">
 					<h3 class="case-comp__tit">業務へのAI導入</h3>
 					<p class="case-comp__txt">
 						属人化解消やリソース不足の解消など、既存業務改善のためのAI導入を支援します。<br>
@@ -267,7 +266,7 @@
 						店舗顧客の行動予測<br>
 					</p>
 				</div>
-				<div class="case-comp wow fadeInUp" data-wow-delay="1s" data-wow-duration="1.5s">
+				<div class="case-comp">
 					<h3 class="case-comp__tit">AIプロダクト開発</h3>
 					<p class="case-comp__txt">
 						新規事業や客先の受託開発など、新しいAIプロダクトの開発を支援します。<br>
@@ -279,7 +278,7 @@
 						問い合わせ送信ツール<br>
 					</p>
 				</div>
-				<div class="case-comp wow fadeInUp" data-wow-delay="1.5s" data-wow-duration="1.5s">
+				<div class="case-comp">
 					<h3 class="case-comp__tit">AIへの機能追加</h3>
 					<p class="case-comp__txt">
 						ツールやシステムなどのソフトウェアに対して新しい機能の追加や改善を支援します。<br>
@@ -297,7 +296,7 @@
 		<section class="example-sec">
 			<h2 class="sec-tit">専門のAI開発人材事例</h2>
 			<div class="example-sec__wrapper container">
-				<div class="example-comp wow fadeInUp" data-wow-delay="0.5s" data-wow-duration="1.5s">
+				<div class="example-comp">
 					<h3 class="example-comp__tit">AIエンジニア</h3>
 					<figure class="example-comp__img">
 						<img src="./assets/img/example/01.png" alt="AIエンジニア">
@@ -312,7 +311,7 @@
 						<span>・ニュース記事のレコメンドシステムの設計&開発など</span><br>
 					</p>
 				</div>
-				<div class="example-comp wow fadeInUp" data-wow-delay="1s" data-wow-duration="1.5s">
+				<div class="example-comp">
 					<h3 class="example-comp__tit">アプリケーションエンジニア</h3>
 					<figure class="example-comp__img">
 						<img src="./assets/img/example/02.png" alt="アプリケーションエンジニア">
@@ -327,7 +326,7 @@
 						<span>・顔認識による勤怠アプリの技術提案、システムチューニング、インフラ構築など</span><br>
 					</p>
 				</div>
-				<div class="example-comp wow fadeInUp" data-wow-delay="1.5s" data-wow-duration="1.5s">
+				<div class="example-comp">
 					<h3 class="example-comp__tit">データエンジニア</h3>
 					<figure class="example-comp__img">
 						<img src="./assets/img/example/03.png" alt="データエンジニア">
@@ -390,7 +389,7 @@
 			<div class="container">
 				<h2 class="sec-tit qa-sec__tit">よくあるご質問</h2>
 				<div class="qa-sec__wrapper">
-					<div class="accordion-item wow fadeInUp" data-wow-delay="0.5s" data-wow-duration="1s">
+					<div class="accordion-item">
 						<button class="accordion-question active">
 							<span>Q.</span>
 							<h3>どんな専門のAI開発人材がいますか。</h3>
@@ -403,7 +402,7 @@
 							</p>
 						</div>
 					</div>
-					<div class="accordion-item wow fadeInUp" data-wow-delay="0.5s" data-wow-duration="1s">
+					<div class="accordion-item">
 						<button class="accordion-question active">
 							<span>Q.</span>
 							<h3>料金体系について教えてください。</h3>
@@ -421,7 +420,7 @@
 							</p>
 						</div>
 					</div>
-					<div class="accordion-item wow fadeInUp" data-wow-delay="0.5s" data-wow-duration="1s">
+					<div class="accordion-item">
 						<button class="accordion-question active">
 							<span>Q.</span>
 							<h3>発注方法（契約形態）について教えてください。</h3>
@@ -434,7 +433,7 @@
 							</p>
 						</div>
 					</div>
-					<div class="accordion-item wow fadeInUp" data-wow-delay="0.5s" data-wow-duration="1s">
+					<div class="accordion-item">
 						<button class="accordion-question active">
 							<span>Q.</span>
 							<h3>業務委託ではなく派遣での対応は可能ですか。</h3>
@@ -467,7 +466,6 @@
 
 	<footer id="footer" class="footer">
 	</footer>
-	<script src="./assets/js/wow.js"></script>
 	<script src="./assets/js/accordion.js"></script>
 </body>
 
