fix: responsive contact form

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
 	<footer id="footer" class="footer">
 	</footer>
 	<script src="./assets/js/accordion.js"></script>
-	<div id="satori__creative_container">
+	<div id="satori__creative_container" class="container">
 		<script id="-_-satori_creative-_-" src="//delivery.satr.jp/js/creative_set.js" data-key="64290dcce830d66e"></script>
 	</div>
 </body>
