fix: CTA button move & add contact title

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					</h1>
 					<ul class="contact-link">
 						<li class="inquiry-btn">
-							<a href="https://edge-work.com/contact/">お問い合わせ</a>
+							<a href="#contact_area">お問い合わせ</a>
 						</li>
 						<li class="catalog-btn">
 							<a href="https://edge-work.com/catalog/">資料請求</a>
@@ -198,6 +198,20 @@
 			</div>
 		</section>
 
+		<section class="contact-sec">
+			<div class="contact-sec__wrapper container">
+				<h4>料金・費用や事例についてなど、 <br class="is_sp">お気軽にお問い合わせください。</h4>
+				<ul class="contact-link">
+					<li class="inquiry-btn">
+						<a href="#contact_area">お問い合わせ</a>
+					</li>
+					<li class="catalog-btn">
+						<a href="https://edge-work.com/catalog/">資料請求</a>
+					</li>
+				</ul>
+			</div>
+		</section>
+
 		<section class="reason-sec">
 			<h2 class="sec-tit">選ばれる3つの理由</h2>
 			<div class="reason-sec__wrapper container">
@@ -246,7 +260,7 @@
 		<section class="case-sec">
 			<ul class="contact-link">
 				<li class="inquiry-btn">
-					<a href="https://edge-work.com/contact/">お問い合わせ</a>
+					<a href="#contact_area">お問い合わせ</a>
 				</li>
 				<li class="catalog-btn">
 					<a href="https://edge-work.com/catalog/">資料請求</a>
@@ -385,6 +399,20 @@
 			</div>
 		</section>
 
+		<section class="contact-sec">
+			<div class="contact-sec__wrapper container">
+				<h4>料金・費用や事例についてなど、 <br class="is_sp">お気軽にお問い合わせください。</h4>
+				<ul class="contact-link">
+					<li class="inquiry-btn">
+						<a href="#contact_area">お問い合わせ</a>
+					</li>
+					<li class="catalog-btn">
+						<a href="https://edge-work.com/catalog/">資料請求</a>
+					</li>
+				</ul>
+			</div>
+		</section>
+
 		<section class="qa-sec">
 			<div class="container">
 				<h2 class="sec-tit qa-sec__tit">よくあるご質問</h2>
@@ -449,27 +477,21 @@
 			</div>
 		</section>
 
-		<section class="contact-sec">
-			<div class="contact-sec__wrapper container">
-				<h4>料金・費用や事例についてなど、 <br class="is_sp">お気軽にお問い合わせください。</h4>
-				<ul class="contact-link">
-					<li class="inquiry-btn">
-						<a href="https://edge-work.com/contact/">お問い合わせ</a>
-					</li>
-					<li class="catalog-btn">
-						<a href="https://edge-work.com/catalog/">資料請求</a>
-					</li>
-				</ul>
+		<section class="contact-sec" id="contact_area">
+			<div class="container">
+				<h2 class="sec-tit contact-sec__tit">お問い合わせフォーム</h2>
+				<div id="satori__creative_container">
+					<script id="-_-satori_creative-_-" src="//delivery.satr.jp/js/creative_set.js"
+						data-key="64290dcce830d66e"></script>
+				</div>
 			</div>
 		</section>
+
 	</main>
 
 	<footer id="footer" class="footer">
 	</footer>
 	<script src="./assets/js/accordion.js"></script>
-	<div id="satori__creative_container" class="container">
-		<script id="-_-satori_creative-_-" src="//delivery.satr.jp/js/creative_set.js" data-key="64290dcce830d66e"></script>
-	</div>
 </body>
 
 <noscript>
