--- a/index.html
+++ b/index.html
@@ -37,7 +37,17 @@
 
 <body>
 	<header id="header" class="header">
-
+		<h1>
+			<img src="./assets/img/logo.svg" alt="LOGO" class="header_logo">
+		</h1>
+		<ul class="contact-link">
+			<li class="inquiry-btn">
+				<a href="#contact_area">お問い合わせ</a>
+			</li>
+			<li class="catalog-btn">
+				<a href="https://edge-work.com/catalog/">資料請求</a>
+			</li>
+		</ul>
 	</header>
 	<main id="main">
 		<section class="mainvisual">
@@ -257,15 +267,21 @@
 			</div>
 		</section>
 
+		<section class="contact-sec">
+			<div class="contact-sec__wrapper container">
+				<h4>料金・費用や事例についてなど、 <br class="is_sp">お気軽にお問い合わせください。</h4>
+				<ul class="contact-link">
+					<li class="inquiry-btn">
+						<a href="#contact_area">お問い合わせ</a>
+					</li>
+					<li class="catalog-btn">
+						<a href="https://edge-work.com/catalog/">資料請求</a>
+					</li>
+				</ul>
+			</div>
+		</section>
+
 		<section class="case-sec">
-			<ul class="contact-link">
-				<li class="inquiry-btn">
-					<a href="#contact_area">お問い合わせ</a>
-				</li>
-				<li class="catalog-btn">
-					<a href="https://edge-work.com/catalog/">資料請求</a>
-				</li>
-			</ul>
 			<h2 class="sec-tit">様々なケースに対応可能</h2>
 			<div class="case-sec__wrapper container">
 				<div class="case-comp">
@@ -490,6 +506,18 @@
 	</main>
 
 	<footer id="footer" class="footer">
+		<div class="container">
+			<ul class="footer-links">
+				<li><a href="https://www.edge-tech.co.jp/company/" target="_blank">会社情報</a></li>
+				<li><a href="#contact_area">お問い合わせ</a></li>
+				<li><a href="https://edge-work.com/catalog/">資料請求</a></li>
+				<li><a href="https://www.edge-tech.co.jp/security.html" target="_blank">セキュリティポリシー</a></li>
+				<li><a href="https://www.edge-tech.co.jp/privacy.html" target="_blank">個人情報保護方針</a></li>
+			</ul>
+			<p class="copyright">
+				Copyright © EDGE Technology, Inc. All Rights Reserved.
+			</p>
+		</div>
 	</footer>
 	<script src="./assets/js/accordion.js"></script>
 </body>
